// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormsService createCustomDailyScheduleFormGroup should create form group 1`] = `
Object {
  "date": "",
  "from": "",
  "to": "",
}
`;

exports[`FormsService createLaneFormGroup should create form group 1`] = `
Object {
  "color": "#ffffff",
  "id": Any<String>,
  "name": "",
}
`;

exports[`FormsService createProductAvailabilityFormGroup should create form group 1`] = `
Object {
  "dayFrom": "",
  "dayTo": "",
  "price": "",
  "timeFrom": "",
  "timeTo": "",
  "type": "A",
}
`;

exports[`FormsService createProductConfigSetFormGroup should create form group 1`] = `
Object {
  "items": Array [],
  "position": 0,
  "productSetId": "",
}
`;

exports[`FormsService createProductConfigSetItemFormGroup should create form group 1`] = `
Object {
  "netPackagingFee": 0,
  "position": 0,
  "price": 0,
  "productComponentId": "",
}
`;

exports[`FormsService createProductVariantFormGroup should create form group 1`] = `
Object {
  "availabilities": Array [],
  "id": Any<String>,
  "isAvailable": true,
  "netPackagingFee": 0,
  "pack": Object {
    "size": 0,
    "unit": "",
  },
  "position": 0,
  "price": 0,
  "soldOut": false,
  "variantName": Object {
    "de": "",
    "en": "",
    "hu": "",
  },
}
`;

exports[`FormsService createRatingPolicyFormGroup should create form group  1`] = `
Object {
  "description": Object {
    "de": "",
    "en": "",
    "hu": "",
  },
  "key": "",
  "ratings": Array [],
  "title": Object {
    "de": "",
    "en": "",
    "hu": "",
  },
}
`;

exports[`FormsService createRkeeperFormGroup should create form group with anyupp password 1`] = `
Object {
  "anyuppPassword": "",
  "anyuppUsername": "",
  "endpointUri": "",
  "rkeeperPassword": "",
  "rkeeperUsername": "",
}
`;

exports[`FormsService createRkeeperFormGroup should create form group without anyupp password 1`] = `
Object {
  "anyuppPassword": "",
  "anyuppUsername": "",
  "endpointUri": "",
  "rkeeperPassword": "",
  "rkeeperUsername": "",
}
`;

exports[`FormsService createServiceFeePolicyFormGroup should create form group  1`] = `
Object {
  "percentage": "",
  "type": "",
}
`;

exports[`FormsService createTipPolicyFormGroup should create form group  1`] = `
Object {
  "description": Object {
    "de": "",
    "en": "",
    "hu": "",
  },
  "minOtherAmount": null,
  "percents": Array [],
  "title": Object {
    "de": "",
    "en": "",
    "hu": "",
  },
}
`;
